# scampii

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
examples/: all_themes.rs  custom_theme.rs  export_emoji.rs  iterm_image.rs  loading.rs  single_frame.rs  themes.rs
scripts/: generate_emoji.py
src/: color.rs  error.rs  frame.rs  iterm.rs  kitty.rs  lib.rs  main.rs  pixel.rs  png.rs  raster.rs  sixel.rs  terminal.rs  theme.rs
