[package]
name = "scampii"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "An animated pixel-art shrimp for your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/goldylocks87/scampii"
homepage = "https://github.com/goldylocks87/scampii"
readme = "README.md"
documentation = "https://docs.rs/scampii"
keywords = ["terminal", "animation", "pixel-art", "ascii-art", "cli"]
categories = ["command-line-utilities", "graphics", "visualization"]
include = ["src/**", "examples/**", "LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "scampii"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "scampii"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"], optional = true }
crossterm = "0.27"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
